hphp/hack/test/typecheck/refinements/inter_obj_get.php.like_types.exp
File "inter_obj_get.php", line 26, characters 17-18:
Invalid argument (Typing[4110])
File "inter_obj_get.php", line 30, characters 20-20:
Expected ~int because it is an unenforceable type
File "inter_obj_get.php", line 6, characters 36-41:
But got string
